<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewPassword"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/labelDomainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:labelFor="@+id/editDomain"
                android:text="@string/text_password_label_domain_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/labelDomainDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editDomain"
                android:text="@string/text_password_label_domain_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <EditText
                android:id="@+id/editDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textNoSuggestions|text"
                android:password="false"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/labelMasterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:labelFor="@+id/editMaster"
                android:text="@string/text_password_label_master_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/labelMasterDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editMaster"
                android:text="@string/text_password_label_master_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <EditText
                android:id="@+id/editMaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textNoSuggestions|textPassword|text"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/labelHashedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:labelFor="@+id/editHashed"
                android:text="@string/text_password_label_hashed_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/labelHashedDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editHashed"
                android:text="@string/text_password_label_hashed_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <EditText
                android:id="@+id/editHashed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Copy"
        android:id="@+id/buttonCopy"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>